gitea/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea 
  namespace: gitea 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea 
  template:
    metadata:
      labels:
        app: gitea 
    spec:
      containers:
      - name: gitea 
        image: gitea/gitea:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: gitea-data
          mountPath: /data
      volumes:
      - name: gitea-data
        persistentVolumeClaim:
          claimName: gitea-pvc
