gitea/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea 
  labels:
    app: gitea
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: gitea
